--- a/source/about/index.html
+++ b/source/about/index.html
@@ -15,11 +15,11 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> RBAC应用</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <li><i class="fa fa-square-o"></i> 祥琳JokERP</li>
-    <li><i class="fa fa-square-o"></i> 憩园管理系统</li>
+    <li><i class="fa fa-square-o"></i> 憩园信息化</li>
     <li><i class="fa fa-square-o"></i> 掌上执法</li>
     <li><i class="fa fa-square-o"></i> 云上船检</li>
     <li><i class="fa fa-square-o"></i> 停车场电子屏</li>
-    <li><i class="fa fa-check-square-o"></i> 云祭扫应用</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li>
   </ul>
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 尊巴Zumba</li>
@@ -43,15 +43,21 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 巫师3</li>
     <li><i class="fa fa-square-o"></i> 生化危机6</li>
     <li><i class="fa fa-square-o"></i> 分手厨房</li>
-    <li><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
-    <li><i class="fa fa-check-square-o"></i> 双人成行</li>
-    <li><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
   </ul>
 </div>
 
 <style>
+  @media screen and (max-device-width:800px) {
+    .about-content-list {
+      width: 95%;
+    }
+  }
   .about-tabs {
     display: flex;
+    flex-wrap: wrap;
     justify-content: space-around;
   }
   .about-content-list {
@@ -60,6 +66,9 @@ date: 2021-02-08 09:37
   .about-content-list li {
     list-style-type: none!important;
     position: relative;
+  }
+  .about-content-list li.done {
+    color: #ccc;
   }
   .about-content-list li i {
     display: inline-block;
