--- a/source/about/index.html
+++ b/source/about/index.html
@@ -12,7 +12,7 @@ date: 2021-02-08 09:37
 <div class="about-tabs">
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 狄獴</li>
-    <li><i class="fa fa-square-o"></i> RBAC应用</li>
+    <li><i class="fa fa-square-o"></i> JAEGER</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <li><i class="fa fa-square-o"></i> 祥琳JokERP</li>
     <li><i class="fa fa-square-o"></i> 憩园信息化</li>
@@ -33,6 +33,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 货币金融学</li>
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
+    <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
   </ul>
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 王者荣耀</li>
