--- a/source/about/index.html
+++ b/source/about/index.html
@@ -12,6 +12,7 @@ date: 2021-02-08 09:37
 <div class="about-tabs">
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 狄獴</li>
+    <li><i class="fa fa-square-o"></i> RPA?</li>
     <li><i class="fa fa-square-o"></i> JAEGER</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <li><i class="fa fa-square-o"></i> 祥琳JokERP</li>
@@ -25,6 +26,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 尊巴Zumba</li>
     <li><i class="fa fa-square-o"></i> 马甲线21天</li>
     <li><i class="fa fa-square-o"></i> 剧-大明王朝1566</li>
+    <li><i class="fa fa-square-o"></i> 剧-走向共和</li>
     <li><i class="fa fa-square-o"></i> 书-明朝那些事儿</li>
     <li><i class="fa fa-square-o"></i> 书-觉醒</li>
     <li><i class="fa fa-square-o"></i> 宋大叔教音乐</li>
@@ -40,10 +42,12 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 塞尔达荒野之息</li>
     <li><i class="fa fa-square-o"></i> 只狼</li>
     <li><i class="fa fa-square-o"></i> 对马岛之魂</li>
-    <li><i class="fa fa-square-o"></i> 黑暗之魂</li>
+    <li><i class="fa fa-square-o"></i> 血源诅咒</li>
+    <li><i class="fa fa-square-o"></i> 黑暗之魂3</li>
     <li><i class="fa fa-square-o"></i> 巫师3</li>
     <li><i class="fa fa-square-o"></i> 生化危机6</li>
     <li><i class="fa fa-square-o"></i> 分手厨房</li>
+    <li><i class="fa fa-square-o"></i> 异域镇魂曲</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
