--- a/source/about/index.html
+++ b/source/about/index.html
@@ -14,6 +14,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 狄獴</li>
     <li><i class="fa fa-square-o"></i> RPA?</li>
     <li><i class="fa fa-square-o"></i> JAEGER</li>
+    <li><i class="fa fa-square-o"></i> RIFLE</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <li><i class="fa fa-square-o"></i> 祥琳JokERP</li>
     <li><i class="fa fa-square-o"></i> 憩园信息化</li>
@@ -36,6 +37,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
+    <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
   </ul>
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 王者荣耀</li>
