--- a/source/about/index.html
+++ b/source/about/index.html
@@ -15,31 +15,59 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> RPA?</li>
     <li><i class="fa fa-square-o"></i> JAEGER</li>
     <li><i class="fa fa-square-o"></i> RIFLE</li>
+    <li><i class="fa fa-square-o"></i> UniApp小程序</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
-    <li><i class="fa fa-square-o"></i> 祥琳JokERP</li>
+    <!--
+    https://www.zhihu.com/question/40636150/answer/1035060868
+    https://www.zhihu.com/question/40636150/answer/1207182259
+    https://zhuanlan.zhihu.com/p/114446410
+    https://www.zhihu.com/question/27580103/answer/786360292
+    https://www.zhihu.com/question/40636150/answer/1128065097
+    https://www.zhihu.com/question/279262202/answer/870468632
+    https://www.zhihu.com/question/40636150/answer/1137784329
+    https://www.zhihu.com/question/307218214/answer/895293427
+    https://www.zhihu.com/question/40636150/answer/849087494
+    -->
     <li><i class="fa fa-square-o"></i> 憩园信息化</li>
     <li><i class="fa fa-square-o"></i> 掌上执法</li>
-    <li><i class="fa fa-square-o"></i> 云上船检</li>
     <li><i class="fa fa-square-o"></i> 停车场电子屏</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 祥琳JokERP</li><!-- 到款率 2000/7500 -->
+    <li class="done"><i class="fa fa-check-square-o"></i> 云上船检</li><!-- 到款率 3750/6250 -->
     <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li>
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 蛙泳和自由泳转身</li> <!-- https://www.bilibili.com/video/BV1Ei4y1b7G4/?spm_id_from=trigger_reload -->
+    <li><i class="fa fa-square-o"></i> 剧-Yes, Prime Minister.</li>
+    <li><i class="fa fa-square-o"></i> 课-小马哥spring</li><!-- 用周适的微信号登录，https://time.geekbang.org/course/detail/100042601-179503 -->
     <li><i class="fa fa-square-o"></i> 尊巴Zumba</li>
-    <li><i class="fa fa-square-o"></i> 马甲线21天</li>
-    <li><i class="fa fa-square-o"></i> 剧-大明王朝1566</li>
+    <li><i class="fa fa-square-o"></i> 马甲线21天</li><!-- https://weibo.com/tv/show/1034:4641187924213875 -->
+    <li><i class="fa fa-square-o"></i> 瑜伽环</li><!-- https://article.xuexi.cn/articles/index.html?art_id=2481841018255236511 -->
     <li><i class="fa fa-square-o"></i> 剧-走向共和</li>
     <li><i class="fa fa-square-o"></i> 书-明朝那些事儿</li>
     <li><i class="fa fa-square-o"></i> 书-觉醒</li>
+    <li><i class="fa fa-square-o"></i> 书-君主论</li>
     <li><i class="fa fa-square-o"></i> 宋大叔教音乐</li>
     <li><i class="fa fa-square-o"></i> 课程-CSAPP</li>
     <li><i class="fa fa-square-o"></i> 经济学原理</li>
     <li><i class="fa fa-square-o"></i> 货币金融学</li>
+    <li><i class="fa fa-square-o"></i> 国际经济学：理论与政策</li>
+    <li><i class="fa fa-square-o"></i> 花车理论</li><!-- https://zhuanlan.zhihu.com/p/340630076 -->
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
+    <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>
+    <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 剧-大明王朝1566</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 电影-黑客帝国</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 电影-大空头</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 电影-楚门的世界</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 电影-谍影重重</li>
+
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 荒野大镖客</li>
+    <li><i class="fa fa-square-o"></i> GTA5</li>
     <li><i class="fa fa-square-o"></i> 王者荣耀</li>
     <li><i class="fa fa-square-o"></i> 塞尔达荒野之息</li>
     <li><i class="fa fa-square-o"></i> 只狼</li>
@@ -50,6 +78,9 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 生化危机6</li>
     <li><i class="fa fa-square-o"></i> 分手厨房</li>
     <li><i class="fa fa-square-o"></i> 异域镇魂曲</li>
+    <li><i class="fa fa-square-o"></i> 雕塑</li>
+    <li><i class="fa fa-square-o"></i> 围棋</li>
+    <li><i class="fa fa-square-o"></i> 钢琴</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
