--- a/source/about/index.html
+++ b/source/about/index.html
@@ -32,11 +32,11 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 掌上执法</li>
     <li><i class="fa fa-square-o"></i> 停车场电子屏</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 祥琳JokERP</li><!-- 到款率 2000/7500 -->
-    <li class="done"><i class="fa fa-check-square-o"></i> 云上船检</li><!-- 到款率 3750/6250 -->
-    <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 云上船检</li><!-- 到款率 6250/6250 -->
+    <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li><!-- 到款率 20k/20k -->
   </ul>
   <ul class="about-content-list">
-    <li><i class="fa fa-square-o"></i> 蛙泳和自由泳转身</li> <!-- https://www.bilibili.com/video/BV1Ei4y1b7G4/?spm_id_from=trigger_reload -->
+    <!-- 蛙泳和自由泳转身 https://www.bilibili.com/video/BV1Ei4y1b7G4/?spm_id_from=trigger_reload -->
     <li><i class="fa fa-square-o"></i> 剧-Yes, Prime Minister.</li>
     <li><i class="fa fa-square-o"></i> 课-小马哥spring</li><!-- 用周适的微信号登录，https://time.geekbang.org/course/detail/100042601-179503 -->
     <li><i class="fa fa-square-o"></i> 尊巴Zumba</li>
@@ -55,9 +55,11 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
+    <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
     <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>
     <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>
+    <li><i class="fa fa-square-o"></i> 书-思考世界的孩子</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 剧-大明王朝1566</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-黑客帝国</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-大空头</li>
@@ -75,12 +77,15 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 血源诅咒</li>
     <li><i class="fa fa-square-o"></i> 黑暗之魂3</li>
     <li><i class="fa fa-square-o"></i> 巫师3</li>
-    <li><i class="fa fa-square-o"></i> 生化危机6</li>
+    <li><i class="fa fa-square-o"></i> 生化危机6</li><!-- 自己玩一遍，看一遍视频，再自己过一遍 -->
     <li><i class="fa fa-square-o"></i> 分手厨房</li>
     <li><i class="fa fa-square-o"></i> 异域镇魂曲</li>
-    <li><i class="fa fa-square-o"></i> 雕塑</li>
+    <li><i class="fa fa-square-o"></i> 雕塑</li><!-- 画，佛像 -->
     <li><i class="fa fa-square-o"></i> 围棋</li>
     <li><i class="fa fa-square-o"></i> 钢琴</li>
+    <li><i class="fa fa-square-o"></i> 一面书墙</li>
+    <li><i class="fa fa-square-o"></i> KALI Linux</li>
+    <li><i class="fa fa-square-o"></i> Adobe PS/AI/AE/PR</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
