--- a/source/about/index.html
+++ b/source/about/index.html
@@ -57,6 +57,8 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
     <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
+    <li><i class="fa fa-square-o"></i> 书-圣殿春秋</li>
+    <li><i class="fa fa-square-o"></i> 电影-玛丽和马克思</li>
     <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>
     <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>
     <li><i class="fa fa-square-o"></i> 书-思考世界的孩子</li>
