--- a/source/about/index.html
+++ b/source/about/index.html
@@ -83,6 +83,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 分手厨房</li>
     <li><i class="fa fa-square-o"></i> 异域镇魂曲</li>
     <li><i class="fa fa-square-o"></i> 雕塑</li><!-- 画，佛像 -->
+    <li><i class="fa fa-square-o"></i> 画-iPad-procreate</li><!-- apple pencil -->
     <li><i class="fa fa-square-o"></i> 围棋</li>
     <li><i class="fa fa-square-o"></i> 钢琴</li>
     <li><i class="fa fa-square-o"></i> 一面书墙</li>
