--- a/source/about/index.html
+++ b/source/about/index.html
@@ -14,7 +14,8 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 狄獴</li>
     <li><i class="fa fa-square-o"></i> RPA?</li>
     <li><i class="fa fa-square-o"></i> JAEGER</li>
-    <li><i class="fa fa-square-o"></i> RIFLE</li>
+    <li><i class="fa fa-square-o"></i> Saleor</li><!-- https://saleor.io/ -->
+    <!-- <li><i class="fa fa-square-o"></i> 伙伴云搭进销存</li>-->
     <li><i class="fa fa-square-o"></i> UniApp小程序</li>
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <!--
@@ -37,12 +38,13 @@ date: 2021-02-08 09:37
   </ul>
   <ul class="about-content-list">
     <!-- 蛙泳和自由泳转身 https://www.bilibili.com/video/BV1Ei4y1b7G4/?spm_id_from=trigger_reload -->
+    <li><i class="fa fa-square-o"></i> 书-罪与罚</li>
     <li><i class="fa fa-square-o"></i> 剧-Yes, Prime Minister.</li>
     <li><i class="fa fa-square-o"></i> 课-小马哥spring</li><!-- 用周适的微信号登录，https://time.geekbang.org/course/detail/100042601-179503 -->
     <li><i class="fa fa-square-o"></i> 尊巴Zumba</li>
     <li><i class="fa fa-square-o"></i> 马甲线21天</li><!-- https://weibo.com/tv/show/1034:4641187924213875 -->
     <li><i class="fa fa-square-o"></i> 瑜伽环</li><!-- https://article.xuexi.cn/articles/index.html?art_id=2481841018255236511 -->
-    <li><i class="fa fa-square-o"></i> 剧-走向共和</li>
+    <!-- <li><i class="fa fa-square-o"></i> 剧-走向共和</li>-->
     <li><i class="fa fa-square-o"></i> 书-明朝那些事儿</li>
     <li><i class="fa fa-square-o"></i> 书-觉醒</li>
     <li><i class="fa fa-square-o"></i> 书-君主论</li>
@@ -52,6 +54,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 货币金融学</li>
     <li><i class="fa fa-square-o"></i> 国际经济学：理论与政策</li>
     <li><i class="fa fa-square-o"></i> 花车理论</li><!-- https://zhuanlan.zhihu.com/p/340630076 -->
+    <li><i class="fa fa-square-o"></i> 书-数据密集型应用系统设计</li>
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
@@ -61,7 +64,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 电影-玛丽和马克思</li>
     <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>
     <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>
-    <li><i class="fa fa-square-o"></i> 书-思考世界的孩子</li>
+    <li><i class="fa fa-square-o"></i> 书-思考世界的孩子</li><!--关哥说险-->
     <li class="done"><i class="fa fa-check-square-o"></i> 剧-大明王朝1566</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-黑客帝国</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-大空头</li>
