--- a/source/about/index.html
+++ b/source/about/index.html
@@ -12,11 +12,11 @@ date: 2021-02-08 09:37
 <div class="about-tabs">
   <ul class="about-content-list">
     <li><i class="fa fa-square-o"></i> 狄獴</li>
-    <li><i class="fa fa-square-o"></i> RPA?</li>
+<!--    <li><i class="fa fa-square-o"></i> RPA?</li>-->
     <li><i class="fa fa-square-o"></i> JAEGER</li>
-    <li><i class="fa fa-square-o"></i> Saleor</li><!-- https://saleor.io/ -->
+<!--    <li><i class="fa fa-square-o"></i> Saleor</li>&lt;!&ndash; https://saleor.io/ &ndash;&gt;-->
     <!-- <li><i class="fa fa-square-o"></i> 伙伴云搭进销存</li>-->
-    <li><i class="fa fa-square-o"></i> UniApp小程序</li>
+<!--    <li><i class="fa fa-square-o"></i> UniApp小程序</li>-->
     <li><i class="fa fa-square-o"></i> 公众号</li>
     <!--
     https://www.zhihu.com/question/40636150/answer/1035060868
@@ -29,7 +29,7 @@ date: 2021-02-08 09:37
     https://www.zhihu.com/question/307218214/answer/895293427
     https://www.zhihu.com/question/40636150/answer/849087494
     -->
-    <li><i class="fa fa-square-o"></i> 憩园信息化</li>
+    <!-- <li><i class="fa fa-square-o"></i> 憩园信息化</li>--><!--不通-->
     <li><i class="fa fa-square-o"></i> 掌上执法</li>
     <li><i class="fa fa-square-o"></i> 停车场电子屏</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 祥琳JokERP</li><!-- 到款率 2000/7500 -->
@@ -61,10 +61,11 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
     <li><i class="fa fa-square-o"></i> 书-圣殿春秋</li>
-    <li><i class="fa fa-square-o"></i> 电影-玛丽和马克思</li>
-    <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>
-    <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>
+<!--    <li><i class="fa fa-square-o"></i> 电影-玛丽和马克思</li>-->
+<!--    <li><i class="fa fa-square-o"></i> 电影-商海通牒</li>-->
+<!--    <li><i class="fa fa-square-o"></i> 电影-监守自盗</li>-->
     <li><i class="fa fa-square-o"></i> 书-思考世界的孩子</li><!--关哥说险-->
+    <li><i class="fa fa-square-o"></i> 书-藏在地图里的智慧与勇气</li><!--地球知识局推荐，这套装包括《英雄地图》《怪物地图》和配套桌游-->
     <li class="done"><i class="fa fa-check-square-o"></i> 剧-大明王朝1566</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-黑客帝国</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 电影-大空头</li>
@@ -73,6 +74,7 @@ date: 2021-02-08 09:37
 
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 钢铁雄心3</li>
     <li><i class="fa fa-square-o"></i> 荒野大镖客</li>
     <li><i class="fa fa-square-o"></i> GTA5</li>
     <li><i class="fa fa-square-o"></i> 王者荣耀</li>
