--- a/source/about/index.html
+++ b/source/about/index.html
@@ -37,6 +37,11 @@ date: 2021-02-08 09:37
     <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li><!-- 到款率 20k/20k -->
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 书-世界上最简单的会计书</li>
+    <li><i class="fa fa-square-o"></i> 书-小艾上班记</li>
+    <li><i class="fa fa-square-o"></i> 书-黑客与画家</li>
+    <li><i class="fa fa-square-o"></i> 书-增长黑客</li>
+    <!-- <li><i class="fa fa-square-o"></i> 书-精益创业、定位</li>-->
     <!-- 蛙泳和自由泳转身 https://www.bilibili.com/video/BV1Ei4y1b7G4/?spm_id_from=trigger_reload -->
     <li><i class="fa fa-square-o"></i> 书-罪与罚</li>
     <li><i class="fa fa-square-o"></i> 剧-Yes, Prime Minister.</li>
@@ -59,6 +64,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
     <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li>
+    <li><i class="fa fa-square-o"></i> 书-瓦尔登湖</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
     <li><i class="fa fa-square-o"></i> 书-圣殿春秋</li>
 <!--    <li><i class="fa fa-square-o"></i> 电影-玛丽和马克思</li>-->
