--- a/source/about/index.html
+++ b/source/about/index.html
@@ -37,6 +37,7 @@ date: 2021-02-08 09:37
     <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li><!-- 到款率 20k/20k -->
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 书-杀死一只知更鸟</li>
     <li><i class="fa fa-square-o"></i> 书-世界上最简单的会计书</li>
     <li><i class="fa fa-square-o"></i> 书-小艾上班记</li>
     <li><i class="fa fa-square-o"></i> 书-黑客与画家</li>
@@ -63,7 +64,7 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 书-被讨厌的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-幸福的勇气</li>
     <li><i class="fa fa-square-o"></i> 书-金庸小说</li>
-    <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li>
+    <li><i class="fa fa-square-o"></i> 剧-动漫EVA</li><!-- 观看顺序：https://www.bilibili.com/video/av91648182 -->
     <li><i class="fa fa-square-o"></i> 书-瓦尔登湖</li>
     <li><i class="fa fa-square-o"></i> 书-乌合之众</li>
     <li><i class="fa fa-square-o"></i> 书-圣殿春秋</li>
@@ -97,8 +98,9 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 画-iPad-procreate</li><!-- apple pencil -->
     <li><i class="fa fa-square-o"></i> 围棋</li>
     <li><i class="fa fa-square-o"></i> 钢琴</li>
+    <li><i class="fa fa-square-o"></i> 小楷</li>
     <li><i class="fa fa-square-o"></i> 一面书墙</li>
-    <li><i class="fa fa-square-o"></i> KALI Linux</li>
+<!--    <li><i class="fa fa-square-o"></i> KALI Linux</li>-->
     <li><i class="fa fa-square-o"></i> Adobe PS/AI/AE/PR</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
