--- a/source/about/index.html
+++ b/source/about/index.html
@@ -37,6 +37,7 @@ date: 2021-02-08 09:37
     <li class="done"><i class="fa fa-check-square-o"></i> 云祭扫应用</li><!-- 到款率 20k/20k -->
   </ul>
   <ul class="about-content-list">
+    <li><i class="fa fa-square-o"></i> 书-一本书看透股权架构</li>
     <li><i class="fa fa-square-o"></i> 书-杀死一只知更鸟</li>
     <li><i class="fa fa-square-o"></i> 书-世界上最简单的会计书</li>
     <li><i class="fa fa-square-o"></i> 书-小艾上班记</li>
