--- a/source/about/index.html
+++ b/source/about/index.html
@@ -86,7 +86,6 @@ date: 2021-02-08 09:37
     <li><i class="fa fa-square-o"></i> 荒野大镖客</li>
     <li><i class="fa fa-square-o"></i> GTA5</li>
     <li><i class="fa fa-square-o"></i> 王者荣耀</li>
-    <li><i class="fa fa-square-o"></i> 塞尔达荒野之息</li>
     <li><i class="fa fa-square-o"></i> 只狼</li>
     <li><i class="fa fa-square-o"></i> 对马岛之魂</li>
     <li><i class="fa fa-square-o"></i> 血源诅咒</li>
@@ -106,6 +105,8 @@ date: 2021-02-08 09:37
     <li class="done"><i class="fa fa-check-square-o"></i> 人类一败涂地</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 双人成行</li>
     <li class="done"><i class="fa fa-check-square-o"></i> 路易吉鬼屋3</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> T4:噩梦王子</li>
+    <li class="done"><i class="fa fa-check-square-o"></i> 塞尔达荒野之息</li>
   </ul>
 </div>
 
